--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* You can add global styles to this file, and also import other style files */
+markdown {
+    padding: 1rem;
+    display: block;
+}
+markdown h1 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin-bottom: 1.5rem;
+}
+markdown h2 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin-bottom: 1rem;
+}
+
+markdown h3 {
+    font-weight: bold;
+    line-height: 1.75rem;
+    margin-bottom: 0.5rem;
+}
+
+markdown p {
+    margin-bottom: 1rem;
+}
+
+markdown ul {
+    list-style: disc;
+    margin-bottom: 1rem;
+    margin-left: 2rem;
+}
+markdown code {
+    font-weight: bold;
+    color: brown;
+}
